--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,6 @@
 services:
-  - type: web
+  - type: worker
     name: telegram-bot
     runtime: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python bot.py"
-    autoDeploy: true
